[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanowallet"
version = "0.1.6"
description = "async nano library for easy account management"
readme = "README.md"
authors = [
    {name = "gr0vity"}
]
requires-python = ">=3.7"
dependencies = [
    "nano_lib_py==0.5.1",
    "nanorpc>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/gr0vity-dev/nanowallet_py"